--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,11 @@ h1 {
 	font-size: 2.5em;
 }
 
+h1 a {
+	color: #333;
+	text-decoration: none;
+}
+
 h2 {
 	font-size: 1.25em;
 	background-color: #ddd;
